k8s/hashicorp-vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vault-server
  name: vault-server
  namespace: [B_NAMESPACE]
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8200
  selector:
    app: vault-server
  type: NodePort
